test pipeline change pipeline create bash

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "own-dev-hub",
+  "orgName": "scratchTest",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
   "settings": {
